--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -488,7 +488,7 @@ opacity:.35!important;
 }
 
 .xenith_bg {
-background:#363e40 url(https://d3b4yo2b5lbfy.cloudfront.net/wp-content/uploads/2012/10/halloween-2012-mad-king-maze.jpg) 50% 0 no-repeat!important;
+background:#363e40 url(http://www.eavesopticians.co.uk/wp-content/uploads/2016/11/fireworks.jpg) 50% 0 no-repeat!important;
 }
 
 p#UserStatus.userStatus {
