--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -51,6 +51,7 @@ div.attribution.type{background-color:#1a1a1a;color:#959595;border-left:0}
 .Menu .primaryContent{background-color:#1a1a1a!important;color:#959595!important}
 .Menu .secondaryContent{background-color:#1a1a1a!important;color:#959595!important}
 html{background-color:#1a1a1a!important}
+.blockLinksList{background-color:#1a1a1a !important;border-color:#1a1a1a!important}
 .blockLinksList label{border-color:#1a1a1a!important}
 div.tabLinks.articlesTabLinks{background-color:rgba(0,0,0,.015)!important}
 #AccountMenu .statusPoster textarea{background-color:rgba(0,0,0,.015)}
