--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -109,7 +109,7 @@ div.funboxWrapper{display:none!important}
 dl.pairsInline{background:rgba(17,17,17,1)!important}
 .visitorPanel .stats dl{background:rgba(26,26,26,1)!important}
 .xenith_bg_mask{opacity:.35!important}
-.xenith_bg{background:#363e40 url(http://www.planwallpaper.com/static/images/9c752472-d5a9-4d74-978c-344511d0896e.jpg) 50% 0 no-repeat!important}
+.xenith_bg{background:#363e40 url(https://apod.nasa.gov/apod/image/1604/AuroraFalls_Kristjansson_1920.jpg) 50% 0 no-repeat!important}
 p#UserStatus.userStatus{background-color:rgba(25,25,25,1)!important}
 li.threadListSeparator.sticky{background-color:rgba(25,25,25,1)!important}
 li .threadListSeparator{background-color:rgba(25,25,25,1)!important}
