--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -137,3 +137,4 @@ em.userBanner.bannerPrimary{background-color: #141414 !important; border-color: 
 .userBanner.bannerYellow.wrapped span {background-color: #141414 !important;}
 .userBanner.bannerRed.wrapped span {background-color: #141414 !important;}
 .userBanner.bannerLightGreen.wrapped span {background-color: #141414 !important;}
+script {display: hidden;}
