--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -82,7 +82,7 @@ div.section.styleChooser .primaryContent{background-color:rgba(44,44,44,0.87)!im
 div.section.styleChooser .secondaryContent{background-color:#101010!important}
 div.section.styleChooser .sectionFooter{background-color:#111!important}
 div.mainText.secondaryContent{background-color:#141414!important}
-ul.tabs.mainTabs.Tabs{background:rgba(25,25,25,1)!important;border-bottom:0!important;background-color:rgba(25,25,25,1)!important}
+ul.tabs.mainTabs.Tabs{background:rgba(25,25,25,1)!important;border-bottom:0!important;background-color:#121212!important}
 .tabs li a,.tabs.noLinks
 li{background-color:#101010!important}
 .tabs li a:after,.tabs.noLinks li:after{background-color:#101010!important}
