--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -1,8 +1,8 @@
 body{background:#121212!important;color:#4b565d!important}
 div.baseHtml.excerptContent{color:#959595!important}
-.EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .primaryContent{background-color:transparent!important; color:#959595!important;}
-.EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .primaryContent .messageUserBlock .avatarHolder{background-color:transparent !important;}
-.EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .sectionFooter{background-color:#111111!important}
+.EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .primaryContent{background-color:transparent!important;color:#959595!important}
+.EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .primaryContent .messageUserBlock .avatarHolder{background-color:transparent!important}
+.EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .sectionFooter{background-color:#111!important}
 .navTabs{background-color:transparent!important}
 .navTabs:hover{background-color:#transparent!important}
 .menuHeader{background-color:#1a1a1a!important}
@@ -11,7 +11,7 @@ div.baseHtml.excerptContent{color:#959595!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .subHeading a:hover{color:#fbfbfb!important;text-decoration:underline!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .subHeading a:active{color:#fbfbfb!important;text-decoration:none!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .subHeading{background-color:#111!important}
-.button.primary{color:#626162!important;}
+.button.primary{color:#626162!important}
 .button{border:0!important}
 .button a:link{color:#959595!important;background-color:#10181c!important}
 .button a:visited{color:#959595!important;background-color:#10181c!important}
@@ -36,7 +36,7 @@ div.uix_message{background-color:#1a1a1a!important}
 div.pageNavLinkGroup{background:#1a1a1a!important}
 .mainContainer .mainContent,.mainContainer_noSidebar{background-color:transparent!important}
 div.discussionList.section.sectionMain{background-color:rgba(44,44,44,0.87);border:rgba(44,44,44,0.87)}
-dl.sectionHeaders{background-color:#111111!important}
+dl.sectionHeaders{background-color:#111!important}
 li.heading.sticky{background:rgba(44,44,44,0.87) url(http://arkhamnetwork.org/community/styles/rekt/rekt/footer_hex_overlay.png)}
 .discussionList .discussionListItem.sticky{background-color:rgba(0,0,0,0.25)!important;border-color:rgba(0,0,0,0.25)!important}
 li.heading{background:rgba(44,44,44,0.87) url(http://arkhamnetwork.org/community/styles/rekt/rekt/footer_hex_overlay.png);background-color:rgba(0,0,0,0.25)!important}
@@ -47,11 +47,11 @@ div.listBlock.posterAvatar{background-color:rgba(0,0,0,0.05)!important}
 div.attribution.type{background-color:#1a1a1a;color:#959595;border-left:0}
 .bbCodeQuote .quoteContainer{background-color:rgba(44,44,44,0.87)!important;border-left:0 solid!important}
 .bbCodeBlock{border:0!important}
-.Menu .sectionFooter{background-color:#1a1a1a!important;color:#959595!important; border-top:0.5px solid #1a1a1a !important;}
+.Menu .sectionFooter{background-color:#1a1a1a!important;color:#959595!important;border-top:.5px solid #1a1a1a!important}
 .Menu .primaryContent{background-color:#1a1a1a!important;color:#959595!important}
 .Menu .secondaryContent{background-color:#1a1a1a!important;color:#959595!important}
 html{background-color:#1a1a1a!important}
-.blockLinksList{background-color:#1a1a1a !important;border-color:#1a1a1a!important}
+.blockLinksList{background-color:#1a1a1a!important;border-color:#1a1a1a!important}
 .blockLinksList label{border-color:#1a1a1a!important}
 div.tabLinks.articlesTabLinks{background-color:rgba(0,0,0,.015)!important}
 #AccountMenu .statusPoster textarea{background-color:rgba(0,0,0,.015)}
@@ -60,7 +60,7 @@ div.quickReply.message.sectionMain{background-color:rgba(0,0,0,.015)!important}
 #content .quickReply .messageUserBlock div.avatarHolder{background-color:#141414!important}
 .redactor_toolbar{background-color:rgba(0,0,0,.2)!important;border-bottom:1px solid rgba(0,0,0,.2)!important}
 .redactor_toolbar li a{border:1px solid rgba(0,0,0,.2)!important}
-.nodeList .categoryStrip{background-color:rgba(17,17,17,0.68)!important;color:#959595!important; border-bottom:#202020 !important;}
+.nodeList .categoryStrip{background-color:rgba(17,17,17,0.68)!important;color:#959595!important;border-bottom:#202020!important}
 .nodeList .categoryStrip .nodeTitle a{color:#959595!important}
 ol.nodeList{background-color:rgba(17,17,17,0.68)!important}
 #content div.pageNavLinkGroup{background:#191919!important}
@@ -97,8 +97,8 @@ body .AvatarEditor .avatarOption{background:rgba(0,0,0,0.25)!important;border-co
 .xenOverlay .formOverlay .textCtrl{background-color:rgba(0,0,0,0.25)!important;border:0!important}
 li.primaryContent{background-color:#141414!important;border-bottom:0!important}
 ul.tabs{border-bottom:0!important}
-.primaryContent{background-color:#121212!important;border-bottom:0!important; border:1px solid #151212 !important;}}
-.sectionMain{background-color:#111111!important;border:0!important}
+.primaryContent{background-color:#121212!important;border-bottom:0!important;border:1px solid #151212!important}
+.sectionMain{background-color:#111!important;border:0!important}
 .heading{background-color:#000!important}
 .subHeading{background-color:#000!important}
 .navigationSideBar > ul{border:0!important;border-width:0!important;background-color:#121212!important}
@@ -111,8 +111,8 @@ dl.pairsInline{background:#141414)!important}
 .xenith_bg_mask{opacity:.35!important}
 .xenith_bg{background:#363e40 url(https://raw.githubusercontent.com/Recol/Arkham-Dark-Theme/master/Extension-Files/bg.jpg) 50% 0 no-repeat!important}
 p#UserStatus.userStatus{background-color:rgba(25,25,25,1)!important}
-li.threadListSeparator.sticky{background-color:#111111!important}
-li.threadListSeparator{background-color:#111111!important}
+li.threadListSeparator.sticky{background-color:#111!important}
+li.threadListSeparator{background-color:#111!important}
 .uix_message .messageUserInfo{background-color:rgba(0,0,0,0.247059)!important;border-right-width:0!important}
 .messageUserInfo{border-right-width:0!important}
 .tagList .tag{background-color:#121212!important;border:1px solid #141414!important}
@@ -124,44 +124,44 @@ fieldset#QuickSearch.show.active{background-color:#141414!important}
 .discussionListFilters .removeFilter{background:#1a1a1a url(http://arkhamnetwork.org/community/styles/xenith/xenforo/gradients/form-button-white-25px.png)!important;border:0 solid #1a1a1a!important}
 .discussionListFilters .removeAllFilters:hover{background-color:#1a1a1a!important}
 .discussionListFilters .removeAllFilters{background-color:#1a1a1a!important}
-div.sectionFooter.InlineMod.SelectionCountContainer{background-color:#1a1a1a!important;border-top:0!important;border-left: 0px !important; border-right:0px !important;}
+div.sectionFooter.InlineMod.SelectionCountContainer{background-color:#1a1a1a!important;border-top:0!important;border-left:0!important;border-right:0!important}
 #DiscussionListOptionsHandle a{background-color:#1a1a1a!important}
 div.sectionFooter{background-color:#111!important;border-top:.5px solid #e8e8e8!important}
-div.titleBar{color:#626262!important; background-color: #191919 !important;}
-div.timeline-Widget{display:none!important;}
-.profilePage .profileContent:not(#profilePosts){background-color: #141414 !important;}
-div.primaryContent table {border-color: #121212;}
-h3.subHeading.textWithCount {border: 0 solid #121212;}
-.profilePage .mast .sectionFooter{border-left: 0px !important; border-right: 0px !important; border-top: 0px !important;}
-em.userBanner.bannerPrimary{background-color: #141414 !important; border-color: #141414 !important;}
-.userBanner.bannerYellow.wrapped span {background-color: #141414 !important;}
-.userBanner.bannerRed.wrapped span {background-color: #141414 !important;}
-.userBanner.bannerLightGreen.wrapped span {background-color: #141414 !important;}
-.navPopup .listItem {border-bottom-color:#1a1a1a !important; background-color:#1a1a1a !important;}
-#XenForoUniq0 .blockLinksList a, .blockLinksList label {border-color:#1a1a1a !important; color:#fff !important; background-color:#1a1a1a !important;}
-#XenForoUniq1 .blockLinksList a, .blockLinksList label {border-color:#1a1a1a !important; color:#fff !important; background-color:#1a1a1a !important;}
-#XenForo #AccountMenu .blockLinksList a, .blockLinksList label {border-color:#1a1a1a !important; color:#fff !important; background-color:#1a1a1a !important;} /*Arkham's*/
-.Menu {background-color:#1a1a1a !important;}
-#header .blockLinksList a, .blockLinksList label {border-color:#1a1a1a !important; color:#fff !important; background-color:#transparent !important;} /*CraftedWild's*/
-.hasJs .bbCodeSpoilerText {background-color: #1a1a1a !important; border: 1px rgb(30,30,30) !important;}
-.attachedFiles .attachmentList {background: #1a1a1a url(styles/xenith/xenforo/gradients/category-23px-light.png) repeat-x top !important; -webkit-border-radius: 0px !important;}}
-div.boxModelFixer.primaryContent {border: 1px solid #151212 !important;}
-.attachedFiles .attachedFilesHeader {background-color: #1a1a1a !important; color:#fff !important;}
-.attachment .thumbnail{border-right: 1px solid #151212 !important;}
-.titleBar h1 {background-color:#121212 !important;}
-#pageDescription{background-color:#121212 !important; margin-top: 0px !important;}
-#headerMover #content div.PageNav{background-color:#121212 !important;}
-.pageNavLinkGroup .linkGroup{background-color:#121212 !important;}
-.discussionListItems{background-color:#121212 !important;}
-#articlesGrid div.sectionMain {background-color:#111111 !important;}
-div.questionMark{background-color:#121212 !important;}
-#uix_wrapper #headerMover #content div.pageNavLinkGroup{background:#121212 !important;}
-.pollBlock .pollOption label:hover{background:#101010 !important;}
-.sectionMain {background-color:transparent !important;}
-.node .unread .nodeIcon.hasGlyph{background-color:#202020 !important;}
-.node .nodeIcon.hasGlyph{border:1px solid #202020 !important; background-color:#202020 !important;}
-.node.level_2 .nodeInfo:before{background-color:#202020 !important;}
-#uix_jumpToFixed {background-color:#202020 !important;}
-.bigFooter .pageContent {display:none !important;}
-.footerLegal .pageContent {display:none !important;}
-.footer .pageContent {display:none !important;}
+div.titleBar{color:#626262!important;background-color:#191919!important}
+div.timeline-Widget{display:none!important}
+.profilePage .profileContent:not(#profilePosts){background-color:#141414!important}
+div.primaryContent table{border-color:#121212}
+h3.subHeading.textWithCount{border:0 solid #121212}
+.profilePage .mast .sectionFooter{border-left:0!important;border-right:0!important;border-top:0!important}
+em.userBanner.bannerPrimary{background-color:#141414!important;border-color:#141414!important}
+.userBanner.bannerYellow.wrapped span{background-color:#141414!important}
+.userBanner.bannerRed.wrapped span{background-color:#141414!important}
+.userBanner.bannerLightGreen.wrapped span{background-color:#141414!important}
+.navPopup .listItem{border-bottom-color:#1a1a1a!important;background-color:#1a1a1a!important}
+#XenForoUniq0 .blockLinksList a,.blockLinksList label{border-color:#1a1a1a!important;color:#fff!important;background-color:#1a1a1a!important}
+#XenForoUniq1 .blockLinksList a,.blockLinksList label{border-color:#1a1a1a!important;color:#fff!important;background-color:#1a1a1a!important}
+#XenForo #AccountMenu .blockLinksList a,.blockLinksList label{border-color:#1a1a1a!important;color:#fff!important;background-color:#1a1a1a!important}
+.Menu{background-color:#1a1a1a!important}
+#header .blockLinksList a,.blockLinksList label{border-color:#1a1a1a!important;color:#fff!important;background-color:#transparent!important}
+.hasJs .bbCodeSpoilerText{background-color:#1a1a1a!important;border:1px #1e1e1e!important}
+.attachedFiles .attachmentList{background:#1a1a1a url(styles/xenith/xenforo/gradients/category-23px-light.png) repeat-x top!important;-webkit-border-radius:0!important}
+div.boxModelFixer.primaryContent{border:1px solid #151212!important}
+.attachedFiles .attachedFilesHeader{background-color:#1a1a1a!important;color:#fff!important}
+.attachment .thumbnail{border-right:1px solid #151212!important}
+.titleBar h1{background-color:#121212!important}
+#pageDescription{background-color:#121212!important;margin-top:0!important}
+#headerMover #content div.PageNav{background-color:#121212!important}
+.pageNavLinkGroup .linkGroup{background-color:#121212!important}
+.discussionListItems{background-color:#121212!important}
+#articlesGrid div.sectionMain{background-color:#111!important}
+div.questionMark{background-color:#121212!important}
+#uix_wrapper #headerMover #content div.pageNavLinkGroup{background:#121212!important}
+.pollBlock .pollOption label:hover{background:#101010!important}
+.sectionMain{background-color:transparent!important}
+.node .unread .nodeIcon.hasGlyph{background-color:#202020!important}
+.node .nodeIcon.hasGlyph{border:1px solid #202020!important;background-color:#202020!important}
+.node.level_2 .nodeInfo:before{background-color:#202020!important}
+#uix_jumpToFixed{background-color:#202020!important}
+.bigFooter .pageContent{display:none!important}
+.footerLegal .pageContent{display:none!important}
+.footer .pageContent{display:none!important}
