--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -1,4 +1,6 @@
 body{background:#121212!important;color:#4b565d!important}
+.xenith_bg{background: url('chrome-extension://__MSG_@@extension_id__/images/bg.jpg') 50% 0 no-repeat!important}
+.xenith_bg_mask{opacity:.35!important}
 div.baseHtml.excerptContent{color:#959595!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .primaryContent{background-color:transparent!important;color:#959595!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .primaryContent .messageUserBlock .avatarHolder{background-color:transparent!important}
@@ -108,8 +110,6 @@ div.sectionMain.funbox{display:none!important}
 div.funboxWrapper{display:none!important}
 dl.pairsInline{background:#141414)!important}
 .visitorPanel .stats dl{background:rgba(26,26,26,1)!important}
-.xenith_bg_mask{opacity:.35!important}
-.xenith_bg{background:#363e40 url(https://raw.githubusercontent.com/Recol/Arkham-Dark-Theme/master/Extension-Files/bg.jpg) 50% 0 no-repeat!important}
 p#UserStatus.userStatus{background-color:rgba(25,25,25,1)!important}
 li.threadListSeparator.sticky{background-color:#111!important}
 li.threadListSeparator{background-color:#111!important}
@@ -165,3 +165,5 @@ div.questionMark{background-color:#121212!important}
 .bigFooter .pageContent{display:none!important}
 .footerLegal .pageContent{display:none!important}
 .footer .pageContent{display:none!important}
+.redactor_box {border:#121212 !important} 
+.staffTitle {background:#121212 url(styles/xenith/xenforo/gradients/form-button-white-25px.png) repeat-x top!important; border-bottom: 0px !important}
