--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -1,5 +1,5 @@
 body{background:#121212!important;color:#4b565d!important}
-.xenith_bg{background: url('chrome-extension://__MSG_@@extension_id__/images/bg-min.jpg') 50% 0 no-repeat!important}
+.xenith_bg{background: url('chrome-extension://__MSG_@@extension_id__/images/bg.jpg') 50% 0 no-repeat!important}
 .xenith_bg_mask{opacity:.35!important}
 div.baseHtml.excerptContent{color:#959595!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .primaryContent{background-color:transparent!important;color:#959595!important}
@@ -167,3 +167,5 @@ div.questionMark{background-color:#121212!important}
 .footer .pageContent{display:none!important}
 .redactor_box {border:#121212 !important} 
 .staffTitle {background:#121212 url(styles/xenith/xenforo/gradients/form-button-white-25px.png) repeat-x top!important; border-bottom: 0px !important}
+body .itemPageNav a {background-color:#121212 !important; border-radius: 0px !important; color:#e7e7e7 !important; border: 0px !important}
+.itemPageNav span {background-color:#121212 !important; border-radius: 0px !important; color:#e7e7e7 !important; border: 0px !important}
