--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -1,42 +1,42 @@
-body{background:#0e0e0e!important;color:#4b565d!important; background-color:#121212 !important}
-.xenith_bg{background: url('chrome-extension://__MSG_@@extension_id__/images/bg.jpg') 50% 0 no-repeat!important}
-.xenith_bg_mask{opacity:.35!important}
+body{background-color:#121212!important; background: url('chrome-extension://__MSG_@@extension_id__/images/bg-min.jpg') 100% 0 no-repeat !important; background-size: 100% 100% !important}
+#header{background:transparent !important}
 div.baseHtml.excerptContent{color:#959595!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .primaryContent{background-color:transparent!important;color:#959595!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .primaryContent .messageUserBlock .avatarHolder{background-color:transparent!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .sectionFooter{background-color:#111!important}
 .navTabs{background-color:transparent!important}
-.navTabs:hover{background-color:#transparent!important}
+.navTabs:hover{background-color:transparent!important}
 .menuHeader{background-color:#1a1a1a!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .subHeading a:link{color:#FFF!important;text-decoration:none!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .subHeading a:visited{color:#FFF!important;text-decoration:none!important}
-.EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .subHeading a:hover{color:#fbfbfb!important;text-decoration:underline!important}
+.EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .subHeading a:
+er{color:#fbfbfb!important;text-decoration:underline!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .subHeading a:active{color:#fbfbfb!important;text-decoration:none!important}
 .EWRporta2_ArticleList .mainContainer .mainContent .sectionMain .subHeading{background-color:#111!important}
 .button.primary{color:#626162!important}
 .button{border:0!important}
-.button a:link{color:#959595!important;background-color:#10181c!important}
-.button a:visited{color:#959595!important;background-color:#10181c!important}
-.button a:active{color:#959595!important;background-color:#10181c!important}
-.button a:hover{color:#959595!important;background-color:#10181c!important}
+.button a:link{color:#959595!important;background-color:#151515!important}
+.button a:visited{color:#959595!important;background-color:#151515!important}
+.button a:active{color:#959595!important;background-color:#151515!important}
+.button a:hover{color:#959595!important;background-color:#151515!important}
 .button{background-color:#141414!important}
 #content>.titleBar{background-color:#111!important;color:#FFF!important}
 div.messageInfo{color:#959595!important;border-color:#1a1a1a!important}
 div.uix_message{background-color:#1a1a1a!important}
-.messageUserBlock div.avatarHolder{background-color:#1a1a1a!important}
+.messageUserBlock div.avatarHolder{background-color:#131313!important; border-radius: 0px !important}
 .messageUserBlock h3.userText{background-color:#121212!important;border-radius:0!important}
 .messageUserBlock .extraUserInfo{background-color:#121212!important;border-radius:0!important}
 .messageUserBlockToggle{background-color:transparent!important;border:1px solid transparent!important}
 .messageUserBlock .userBanner{border-color:#1a1a1a!important;background-color:transparent!important}
 .userBanner.bannerPrimary.wrapped span{background-color:#121212!important}
-.messageList .message{background:#1a1a1a!important}
-.mcPlayerMessage{background-color:rgba(0,0,0,0.247059)!important}
+.messageList .message{background:#121212!important}
+.mcPlayerMessage{background-color:#131313!important}
 .message .dark_postrating.likesSummary,.dark_postrating{background-color:rgba(0,0,0,0.25)!important;border-color:rgba(0,0,0,0.25)!important}
 .message .messageMeta .control{border:rgba(0,0,0,0.25)!important}
 .message .messageMeta .uix_postbit_privateControlsMenu{border:rgba(0,0,0,0.25)!important}
 .PageNav a{background-color:#1a1a1a!important;color:#959595!important;border:#1a1a1a!important}
 div.pageNavLinkGroup{background:#1a1a1a!important}
-.mainContainer .mainContent,.mainContainer_noSidebar{background-color:transparent!important}
+.mainContainer .mainContent,.mainContainer_noSidebar{background-color:#141414!important}
 div.discussionList.section.sectionMain{background-color:rgba(44,44,44,0.87);border:rgba(44,44,44,0.87)}
 dl.sectionHeaders{background-color:#111!important}
 li.heading.sticky{background:rgba(44,44,44,0.87) url(http://arkhamnetwork.org/community/styles/rekt/rekt/footer_hex_overlay.png)}
@@ -57,14 +57,14 @@ div.attribution.type{background-color:#1a1a1a;color:#959595;border-left:0}
 .blockLinksList label{border-color:#1a1a1a!important}
 div.tabLinks.articlesTabLinks{background-color:rgba(0,0,0,.015)!important}
 #AccountMenu .statusPoster textarea{background-color:rgba(0,0,0,.015)}
-div.tabLinks.forumsTabLinks{background-color:rgba(0,0,0,.015)!important}
-div.quickReply.message.sectionMain{background-color:rgba(0,0,0,.015)!important}
-#content .quickReply .messageUserBlock div.avatarHolder{background-color:#141414!important}
+div.tabLinks.forumsTabLinks{background-color:#14141494!important}
+div.quickReply.message.sectionMain{background-color:#141414!important}
+#content .quickReply .messageUserBlock div.avatarHolder{background-color:#131313!important}
 .redactor_toolbar{background-color:rgba(0,0,0,.2)!important;border-bottom:1px solid rgba(0,0,0,.2)!important}
 .redactor_toolbar li a{border:1px solid rgba(0,0,0,.2)!important}
 .nodeList .categoryStrip{background-color:rgba(17,17,17,0.68)!important;color:#959595!important;border-bottom:#202020!important}
 .nodeList .categoryStrip .nodeTitle a{color:#959595!important}
-ol.nodeList{background-color:rgba(17,17,17,0.68)!important}
+ol.nodeList{background-color:rgba(17,17,17,0.68)!important; border: 1px solid #131313 !important}
 #content div.pageNavLinkGroup{background:#191919!important}
 #content dl.threadAlerts.secondaryContent{background:#080c0e!important}
 div.pageContent.noBorderRadius.skrollable-between{background:rgba(44,44,44,0.87) url(http://arkhamnetwork.org/community/styles/rekt/rekt/footer_hex_overlay.png) no-repeat center -90px!important}
@@ -72,10 +72,10 @@ a.OverlayTrigger.Tooltip{background-color:#121212!important}
 div.nodeInfo.forumNodeInfo{background-color:#121212;border-color:#1a1a1a!important}
 i.iconic.shape-hexagon{color:#665F7A}
 div.uix_nodeTitle_status{background-color:rgba(44,44,44,0.87)}
-dl{border:0 solid #4b565d!important}
-ol.subForumList{background:rgba(0,0,0,0.25) none repeat scroll 0 0!important}
+dl{border:0 solid #transparent!important; color:white !important}
+ol.subForumList{background:#131313 none repeat scroll 0 0!important}
 div.nodeInfo.linkNodeInfo{background-color:#121212;border-color:#10181c;border-top:0!important}
-#uix_wrapper .thread_view .PageNav{background:rgba(0,0,0,0.25)!important}
+#uix_wrapper .thread_view .PageNav{background:transparent!important}
 div.titleBar{background-color:rgba(0,0,0,.045)!important}
 div.mainContentBlock.section.primaryContent{background-color:rgba(0,0,0,0.25)!important;border:1px solid rgba(0,0,0,.1)!important}
 div.section.styleChooser .heading{background:#111!important}
@@ -84,9 +84,9 @@ div.section.styleChooser .primaryContent{background-color:rgba(44,44,44,0.87)!im
 div.section.styleChooser .secondaryContent{background-color:#101010!important}
 div.section.styleChooser .sectionFooter{background-color:#111!important}
 div.mainText.secondaryContent{background-color:#121212!important}
-ul.tabs.mainTabs.Tabs{background:rgba(25,25,25,1)!important;border-bottom:0!important;background-color:#121212!important}
+ul.tabs.mainTabs.Tabs{background:#141414!important;border-bottom:0!important; color:white !important}
 .tabs li a,.tabs.noLinks
-li{background-color:#101010!important}
+li{background-color:#101010!important; color: white !important; border: 1px solid #121212 !important}
 .tabs li a:after,.tabs.noLinks li:after{background-color:#101010!important}
 #profilePosts .primaryContent{background-color:#141414!important;border:0!important}
 div.mainProfileColumn{border-left:0!important}
@@ -101,23 +101,24 @@ li.primaryContent{background-color:#141414!important;border-bottom:0!important}
 ul.tabs{border-bottom:0!important}
 .primaryContent{background-color:#121212!important;border-bottom:0!important;border:1px solid #151212!important}
 .sectionMain{background-color:#111!important;border:0!important}
+#messageList .sectionMain{margin: 3px auto !important}
 .heading{background-color:#000!important}
 .subHeading{background-color:#000!important}
 .navigationSideBar > ul{border:0!important;border-width:0!important;background-color:#121212!important}
-.secondaryContent{background-color:#121212!important;border-bottom:0!important}
+.secondaryContent{background-color:transparent!important;border-bottom:0!important}
 .navTabs .navTab.selected .tabLinks{background-color:#transparent!important}
 div.sectionMain.funbox{display:none!important}
 div.funboxWrapper{display:none!important}
 dl.pairsInline{background:#141414)!important}
-.visitorPanel .stats dl{background:rgba(26,26,26,1)!important}
-p#UserStatus.userStatus{background-color:rgba(25,25,25,1)!important}
+.visitorPanel .stats dl{background:transparent!important}
+p#UserStatus.userStatus{background-color:#141414 !important; color: white !important}
 li.threadListSeparator.sticky{background-color:#111!important}
 li.threadListSeparator{background-color:#111!important}
 .uix_message .messageUserInfo{background-color:#121212!important;border-right-width:0!important}
 .messageUserInfo{border-right-width:0!important; background-color:#121212 !important}
 .tagList .tag{background-color:#121212!important;border:1px solid #141414!important}
 span.arrow{display:none!important}
-#QuickSearch .formPopup{background:#141414!important}
+#QuickSearch .formPopup{background:transparent!important}
 #QuickSearch .show{background-color:#141414!important;border:0!important}
 fieldset#QuickSearch.show.active{background-color:#141414!important}
 .threadListSeparator{background-color:#1a1a1a!important;border-top-width:0!important;border-bottom-width:0!important}
@@ -127,12 +128,11 @@ fieldset#QuickSearch.show.active{background-color:#141414!important}
 div.sectionFooter.InlineMod.SelectionCountContainer{background-color:#1a1a1a!important;border-top:0!important;border-left:0!important;border-right:0!important}
 #DiscussionListOptionsHandle a{background-color:#1a1a1a!important}
 div.sectionFooter{background-color:#111!important;border-top:.5px solid #e8e8e8!important}
-div.titleBar{color:#626262!important;background-color:#191919!important}
+div.titleBar{color:#626262!important;background-color:transparent!important}
 div.timeline-Widget{display:none!important}
 .profilePage .profileContent:not(#profilePosts){background-color:#141414!important}
 div.primaryContent table{border-color:#121212}
 h3.subHeading.textWithCount{border:0 solid #121212}
-.profilePage .mast .sectionFooter{border-left:0!important;border-right:0!important;border-top:0!important}
 em.userBanner.bannerPrimary{background-color:#121212!important;border-color:#121212!important}
 .userBanner.bannerYellow.wrapped span{background-color:#121212!important}
 .userBanner.bannerRed.wrapped span{background-color:#121212!important}
@@ -148,9 +148,9 @@ em.userBanner.bannerPrimary{background-color:#121212!important;border-color:#121
 div.boxModelFixer.primaryContent{border:1px solid #151212!important}
 .attachedFiles .attachedFilesHeader{background-color:#1a1a1a!important;color:#fff!important}
 .attachment .thumbnail{border-right:1px solid #151212!important}
-.titleBar h1{background-color:#121212!important}
-#pageDescription{background-color:#121212!important;margin-top:0!important}
-#headerMover #content div.PageNav{background-color:#121212!important}
+.titleBar h1{background-color:transparent!important; color: #2a517b !important}
+#pageDescription{background-color:transparent!important;margin-top:0!important}
+#headerMover #content div.PageNav{background-color:transparent!important}
 .pageNavLinkGroup .linkGroup{background-color:#121212!important}
 .discussionListItems{background-color:#121212!important}
 #articlesGrid div.sectionMain{background-color:#111!important}
@@ -171,6 +171,45 @@ body .itemPageNav a {background-color:#121212 !important; border-radius: 0px !im
 .itemPageNav span {background-color:#121212 !important; border-radius: 0px !important; color:#e7e7e7 !important; border: 0px !important}
 div.sidebar{background-color:#121212 !important}
 .mainContainer{background:#121212 !important}
-#content{background-color:#121212 !important}
 ul.userGroupRanks.posPadTop{background-color:#121212 !important}
 .messageUserBlock .userBanner{margin-left: -22px !important; margin-right: -15px !important}
+div.pageContent{background:transparent!important}
+#content .pageContent::before{display:none !important}
+.breadcrumb{background-color:#121212 !important; border:1px solid #141414 !important}
+span.crumbs{background-color:#121212 !important; border:1px solid #141414 !important}
+.sidebar .section .primaryContent h3, .sidebar .section .secondaryContent h3, .profilePage .mast .section.infoBlock h3{background-color:#0e0e0e !important; border: 1px solid #0f0f0f !important}
+.sidebar .section .secondaryContent {border: 1px solid #131313 !important}
+.messageUserBlock{border: 1px solid #131313 !important}
+#content .pageContent::after{display: none !important}
+#content .pageContent::before{display: none !important}
+.Menu{border: 1px solid transparent !important}
+.uix_breadCrumb_toggleList li.toggleList_item{background-color: transparent !important; border: 1px solid transparent !important}
+.breadcrumb .crust a.crumb{background-color: #131313 !important; border-bottom: #141414 !important}
+span.nodeIcon{background:#2a517b url(https://i.imgur.com/1ouBjdK.png) no-repeat 0 0 !important}
+div#exposeMask{background-color: #111 !important}
+#ProfilePoster .textCtrl{background-color: #131313 !important; border: 1px solid #151515 !important}
+.profilePostListItem{border-top: 1px solid #151515 !important}
+input#QuickSearchQuery.textCtrl{background-color: #141414 !important; border: 0px !important; color: white !important}
+#QuickSearch .formPopup .secondaryControls {background:#141414 !important}
+#QuickSearch .formPopup .controlsWrapper .textCtrl{background: #131313 !important; color: white !important; border: 1px solid #151515 !important}
+div#calroot{background-color: #141414 !important; border: 1px solid #151515 !important}
+span.selectionControl.secondaryContent{background-color: #151515 !important; color: white !important}
+span.actionControl.sectionFooter{background-color: #141414 !important; color: white !important}
+em.userTitle span{background-color: #141414 !important}
+div.secondaryContent.pairsJustified{background-color:#141414 !important}
+.profilePage .mast .section.infoBlock{border: 1px solid #151515 !important}
+.profilePage .profileContent{background-color:#141414 !important}
+.profilePage .tabs.mainTabs li a{color: white !important; font-weight: normal !important; border: 1px solid #151515 !important}
+#jumpMenu div.secondaryContent{background-color:#1b1b1b !important; border: 1px solid #151515 !important}
+.profilePage .mainProfileColumn{background-color: #141414 !important}
+.profilePage .mast {background-color: #151515 !important}
+.profilePage .primaryUserBlock .userBlurb{color: white !important}
+.message .messageMeta .control{background-color: #131313 !important; border: 1px solid #121212 !important}
+span.pageNavHeader{color: white !important}
+div.pageNavLinkGroup div.PageNav{background-color:transparent !important}
+.hasFlexbox .node.level_2 .nodeInfo{background-color:#121212 !important; border: 1px solid #141414 !important}
+.sidebar .avatarList ul{background-color:#121212 !important}
+ul#ProfilePostList.nonInitial{background:#121212 !important}
+.sidebar .section #boardStats .pairsJustified, .sidebar .section .statsList .pairsJustified{background-color:#121212 !important}
+.sidebar .section .listInline{background-color:#121212 !important}
+.sidebar .section .footnote{background-color:#121212 !important}
