--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -222,4 +222,6 @@ i.uix_icon.uix_icon-rss{display: none !important}
 div.portaCopy.copyright.muted{display: none !important}
 div.sidebar #widget_2 div.secondaryContent form#ProfilePoster.statusPoster.AutoValidator{background:#121212 !important}
 ol#forums.nodeList.sectionMain{background-color:#121212 !important}
-div.nodeInfo.forumNodeInfo.unread{background-color:#121212 !important}
+div.nodeInfo.forumNodeInfo.unread{background-color:#131313 !important}
+div.nodeInfo.linkNodeInfo{background-color:#131313 !important}
+.nodeList .categoryForumNodeInfo, .nodeList .forumNodeInfo, .nodeList .pageNodeInfo, .nodeList .linkNodeInfo{background-color:#131313 !important}
