--- a/Extension-Files/code1.css
+++ b/Extension-Files/code1.css
@@ -226,3 +226,4 @@ div.nodeInfo.forumNodeInfo.unread{background-color:#131313 !important}
 div.nodeInfo.linkNodeInfo{background-color:#131313 !important}
 .nodeList .categoryForumNodeInfo, .nodeList .forumNodeInfo, .nodeList .pageNodeInfo, .nodeList .linkNodeInfo{background-color:#131313 !important}
 #DiscussionListOptionsHandle a {border-left:0 !important; border-right:0 !important; border-bottom:0 !important; background-color:#121212 !important}
+div.xenPreviewTooltip{color:white !important}
